# swagger-output.json
@@ -5,10 +5,10 @@
     "title": "REST API",
     "description": ""
   },
-  "host": "https://music-api-1899.onrender.com/",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/": {
@@ -29,6 +29,7 @@
         "tags": [
           "songs"
         ],
+        "summary": "Get all songs",
         "description": "",
         "produces": [
           "application/json"
@@ -43,6 +44,7 @@
         "tags": [
           "songs"
         ],
+        "summary": "creates song and add to database",
         "description": "",
         "parameters": [
           {
@@ -80,6 +82,9 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -91,6 +96,7 @@
         "tags": [
           "songs"
         ],
+        "summary": "get a single song - must know the _id",
         "description": "",
         "produces": [
           "application/json"
@@ -113,6 +119,7 @@
         "tags": [
           "songs"
         ],
+        "summary": "updates song",
         "description": "",
         "parameters": [
           {
@@ -156,6 +163,9 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -165,6 +175,178 @@
         "tags": [
           "songs"
         ],
+        "summary": "delete songs",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/album/": {
+      "get": {
+        "tags": [
+          "albums"
+        ],
+        "summary": "Get all albums",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "albums"
+        ],
+        "summary": "creates album and add to database",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "albumTitle": {
+                  "example": "any"
+                },
+                "upc": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "productId": {
+                  "example": "any"
+                },
+                "artist": {
+                  "example": "any"
+                },
+                "releaseDate": {
+                  "example": "any"
+                },
+                "recordLabel": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/album/{id}": {
+      "get": {
+        "tags": [
+          "albums"
+        ],
+        "summary": "get a single album - must know the _id",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "albums"
+        ],
+        "summary": "updates album",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "albumTitle": {
+                  "example": "any"
+                },
+                "upc": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "productId": {
+                  "example": "any"
+                },
+                "artist": {
+                  "example": "any"
+                },
+                "releaseDate": {
+                  "example": "any"
+                },
+                "recordLabel": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "albums"
+        ],
+        "summary": "delete albums",
         "description": "",
         "parameters": [
           {
